--- a/scss/style.scss
+++ b/scss/style.scss
@@ -278,6 +278,7 @@ header {
         }
         textarea {
             width: 580px;
+            resize: none;
         }
         button {
             @include button;
